--- a/src/app/waitlist/waitlist.scss
+++ b/src/app/waitlist/waitlist.scss
@@ -20,12 +20,33 @@
     }
   }
 
+  .scroll-indicator {
+    opacity: 0;
+    text-align: center;
+    color: var(--brown);
+    font-family: var(--fontH);
+    margin-top: 80px;
+    font-size: 1.2rem;
+  }
+  @media screen and (max-width: 1024px) {
+    .scroll-indicator {
+      opacity: 1;
+    }
+  }
+
   #wl-list {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     margin-top: 100px;
     align-items: flex-start;
     gap: 0.5em;
+
+    @media screen and (max-width: 1024px) {
+      overflow-x: scroll;
+      padding-block: 200px;
+      margin-top: -100px;
+      max-width: 100%;
+    }
 
     .waitlist {
       // background: red;
