--- a/src/app/waitlist/waitlist.scss
+++ b/src/app/waitlist/waitlist.scss
@@ -87,6 +87,10 @@
         }
         margin-bottom: -10px;
         position: relative;
+        color: white;
+        h2 {
+          color: white;
+        }
         svg {
           position: absolute;
           bottom: 0%;
