--- a/src/app/components/navigation/navigation.scss
+++ b/src/app/components/navigation/navigation.scss
@@ -27,6 +27,10 @@
         text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.557);
         // -webkit-text-stroke: 2px #b55a6a;
         // text-stroke: 2px #b55a6a;
+
+        @media screen and (min-width: 550px) {
+          display: none;
+        }
         &:hover {
           &::before {
             opacity: 1;
